[tool.poetry]
name = "cosmos-api-watch"
version = "0.2.0"
description = "Service that monitors RPC/REST endpoints for Cosmos ecosystem"
authors = ["fastom794 <vladislav@ryzhaevsky.dev>"]
readme = "README.md"
packages = [{include = "cosmos_api_watch", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.104.1"}
uvicorn = {extras = ["standard"], version = "^0.24.0"}
psycopg = {extras = ["binary"], version = "^3.1.12"}
sqlalchemy = "^2.0.23"
pydantic = {extras = ["email"], version = "^2.0"}
pydantic-settings = "^2.0"
httpx = "^0.25.2"
apscheduler = "^3.10.4"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
jinja2 = "^3.1.2"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
black = "^25.11.0"
isort = "^7.0.0"
ruff = "^0.1.0"
mypy = "^1.0.0"
pre-commit = "^3.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.0.0"

[tool.poetry.scripts]
cosmos-api-watch = "uvicorn cosmos_api_watch.api.routes:app --host 0.0.0.0 --port 8000"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["cosmos_api_watch"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["cosmos_api_watch.*"]
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=cosmos_api_watch",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]

